--- a/shop-parent/shop-service/pom.xml
+++ b/shop-parent/shop-service/pom.xml
@@ -14,6 +14,7 @@
         <module>shop-service-file</module>
         <module>shop-service-canal</module>
         <module>shop-service-content</module>
+        <module>shop-service-search</module>
     </modules>
     <artifactId>shop-service</artifactId>
     <description>微服务</description>
