搜索微服务搭建

--- a/shop-parent/shop-service-api/pom.xml
+++ b/shop-parent/shop-service-api/pom.xml
@@ -31,6 +31,12 @@
             <version>1.0</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>hazer.shopping</groupId>
+            <artifactId>shop-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
