--- a/shop-parent/shop-service-api/shop-service-goods-api/pom.xml
+++ b/shop-parent/shop-service-api/shop-service-goods-api/pom.xml
@@ -11,5 +11,11 @@
 
     <artifactId>shop-service-goods-api</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>hazer.shopping</groupId>
+            <artifactId>shop-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
