--- a/shop-parent/shop-service/shop-service-goods/pom.xml
+++ b/shop-parent/shop-service/shop-service-goods/pom.xml
@@ -18,6 +18,11 @@
     <dependencies>
         <!--client openg start-web mybatis mysql pagehler -->
 
+        <dependency>
+            <groupId>hazer.shopping</groupId>
+            <artifactId>shop-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <!--依赖来自定义的goods微服务的POJO 和feign-->
         <dependency>
             <groupId>hazer.shopping</groupId>
