--- a/shop-parent/shop-service/shop-service-search/pom.xml
+++ b/shop-parent/shop-service/shop-service-search/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>2.1.4.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>hazer.shopping</groupId>
+            <artifactId>shop-service-goods-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
     </dependencies>
 
